# HybridRendererCPU

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/geo_lib/: helpers.cc  helpers.h  tensor.cc  tensor.h  vector.h
src/render_lib/: camera.cc  camera.h  inhabitant.cc  inhabitant.h  mesh.cc  mesh.h  rasterizer.cc  rasterizer.h  raytracer.cc  raytracer.h
src/render_lib/helpers/: boxshape.h  buffer.h  helpers.cc  helpers.h  simple_obj_loader.cc  simple_obj_loader.h
src/render_lib/lights/: directional_light.cc  directional_light.h  light.h
src/tests/geo_lib/: helpers_test.cc  tensor_test.cc  vector_test.cc
